syntax = "proto3";

package calculator;

message SumRequest {
    int32 first = 1;
    int32 second = 2;
}

message SumResponse {
    int32 result = 1;
}

message DiffRequest {
    int32 first = 1;
    int32 second = 2;
}

message DiffResponse{
    int32 result = 1;
}

message ProdRequest {
    int32 first = 1;
    int32 second = 2;
}

message ProdResponse {
    int32 result = 1;
}